[UI Devtools] Fix missing element highlight

UI Devtools use overlay model to support element highlight. However,
in remote debugging configuration, the highlight is handled by
screencast module which is not supported in current UI Devtools.
This CL fixes this by using local debugging on local sessions.

BUG=749778

Change-Id: Idc81ff27e05d5b95e72748873b933b1ecdb80ad2
Reviewed-on: https://chromium-review.googlesource.com/c/1262960
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597200}
Former-commit-id: f13641402a99df47ca2b08cc5d4c50e09b7da80c